--- a/ImagesManager.csproj
+++ b/ImagesManager.csproj
@@ -193,6 +193,8 @@
       <DependentUpon>ImagesDBEntities.edmx</DependentUpon>
       <LastGenOutput>ImagesDBEntities.cs</LastGenOutput>
     </Content>
+    <Content Include="Scripts\bootbox.js" />
+    <Content Include="Scripts\bootbox.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <EntityDeploy Include="Models\ImagesDBEntities.edmx">
@@ -215,6 +217,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\PartialRefresh.js" />
     <Content Include="Scripts\ratings.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -235,6 +238,7 @@
     <Content Include="Views\Images\Details.cshtml" />
     <Content Include="Views\Images\ImageForm.cshtml" />
     <Content Include="Views\Images\Edit.cshtml" />
+    <Content Include="Views\Images\GetImages.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
